force-app/main/default/objects/Opportunity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <formula>IF(NOW() - Last_Activity_Date__c &gt; 90, &apos;Dormant&apos;,
IF(AND(NOW() - Last_Activity_Date__c &gt; 60,NOW() - Last_Activity_Date__c &lt;= 90),&apos;Medium&apos;,
IF(ISBLANK(Last_Activity_Date__c), &apos;No Activity&apos;, &apos;High&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>