force-app/main/default/objects/Opportunity/fields/Actors_with_Errors__c.field-meta.xml
<CustomField>
    <fullName>Actors_with_Errors__c</fullName>
    <description>How many actors have errors due to SAP integration</description>
    <label>Actors with Errors</label>
    <summaryFilterItems>
        <field>Opportunity_Actor__c.SAP_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Actor__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>