force-app/main/default/objects/Opportunity/fields/Actors_with_Errors_Manual__c.field-meta.xml
<CustomField>
    <fullName>Actors_with_Errors_Manual__c</fullName>
    <label>Actors with Errors (manual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>