force-app/main/default/objects/Opportunity/fields/Amount_custom__c.field-meta.xml
<CustomField>
    <fullName>Amount_custom__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of the opportunity without currency</description>
    <inlineHelpText>Amount of the opportunity without currency</inlineHelpText>
    <label>Quantity of the opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>