force-app/main/default/objects/Opportunity/fields/Close_Mode__c.field-meta.xml
<CustomField>
    <fullName>Close_Mode__c</fullName>
    <label>Close Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In shop date</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>More samples</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not contacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>