force-app/main/default/objects/Opportunity/fields/Commercial_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Sales_Office__c</fullName>
    <formula>TEXT(CreatedBy.Sales_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Sales Office</label>
    <type>Text</type>
</CustomField>