force-app/main/default/objects/Opportunity/fields/Company_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Date__c</fullName>
    <label>Company Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>company_list</valueSetName>
    </valueSet>
</CustomField>