force-app/main/default/objects/Opportunity/fields/CompanyDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyDate__c</fullName>
    <label>CompanyDate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>company_list</valueSetName>
    </valueSet>
</CustomField>