force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contact</fullName>
                <default>true</default>
                <label>No contact</label>
            </value>
            <value>
                <fullName>Scheduled call</fullName>
            </value>
            <value>
                <fullName>Email sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>