force-app/main/default/objects/Opportunity/fields/Contractor_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Consulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Consulting</label>
    <type>Checkbox</type>
</CustomField>