force-app/main/default/objects/Opportunity/fields/ContractorConsulting__c.field-meta.xml
<CustomField>
    <fullName>ContractorConsulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContractorConsulting</label>
    <type>Checkbox</type>
</CustomField>