force-app/main/default/objects/Opportunity/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>