force-app/main/default/objects/Opportunity/fields/Date_to_close__c.field-meta.xml
<CustomField>
    <fullName>Date_to_close__c</fullName>
    <formula>CloseDate - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date to close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>