force-app/main/default/objects/Opportunity/fields/Dist_Channel__c.field-meta.xml
<CustomField>
    <fullName>Dist_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>