force-app/main/default/objects/Opportunity/fields/ecommerce__c.field-meta.xml
<CustomField>
    <fullName>ecommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field set to True when an Ecommerce Opportunity is created from SAP</description>
    <label>ecommerce</label>
    <type>Checkbox</type>
</CustomField>