force-app/main/default/objects/Opportunity/fields/End_Project_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Project_Date__c</fullName>
    <label>End Project Date</label>
    <type>DateTime</type>
</CustomField>