force-app/main/default/objects/Opportunity/fields/EndProjectDate__c.field-meta.xml
<CustomField>
    <fullName>EndProjectDate__c</fullName>
    <label>EndProjectDate</label>
    <type>DateTime</type>
</CustomField>