force-app/main/default/objects/Opportunity/fields/EndProjectDateFecha__c.field-meta.xml
<CustomField>
    <fullName>EndProjectDateFecha__c</fullName>
    <label>EndProjectDateFecha</label>
    <type>Date</type>
</CustomField>