force-app/main/default/objects/Opportunity/fields/FechaCita__c.field-meta.xml
<CustomField>
    <fullName>FechaCita__c</fullName>
    <label>FechaCita</label>
    <type>Date</type>
</CustomField>