force-app/main/default/objects/Opportunity/fields/FechaHoraCita__c.field-meta.xml
<CustomField>
    <fullName>FechaHoraCita__c</fullName>
    <label>FechaHoraCita</label>
    <type>DateTime</type>
</CustomField>