force-app/main/default/objects/Opportunity/fields/Freeze_Percentages__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Percentages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze Percentages</label>
    <type>Checkbox</type>
</CustomField>