force-app/main/default/objects/Opportunity/fields/Have_we_won_specification__c.field-meta.xml
<CustomField>
    <fullName>Have_we_won_specification__c</fullName>
    <label>Is PORCELANOSA included in the Spec?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>--</fullName>
                <isActive>false</isActive>
                <label>--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>