force-app/main/default/objects/Opportunity/fields/Have_you_sent_a_quote__c.field-meta.xml
<CustomField>
    <fullName>Have_you_sent_a_quote__c</fullName>
    <label>Have you sent a quote?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>--</fullName>
                <isActive>false</isActive>
                <label>--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>