force-app/main/default/objects/Opportunity/fields/Identify_architect__c.field-meta.xml
<CustomField>
    <fullName>Identify_architect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identify architect</label>
    <type>Checkbox</type>
</CustomField>