force-app/main/default/objects/Opportunity/fields/Identify_developer__c.field-meta.xml
<CustomField>
    <fullName>Identify_developer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identify developer</label>
    <type>Checkbox</type>
</CustomField>