force-app/main/default/objects/Opportunity/fields/IdSapDoc__c.field-meta.xml
<CustomField>
    <fullName>IdSapDoc__c</fullName>
    <description>Id del documento que ha creado la oportunidad, de SAP. Sólo usado para las cargas de SAP</description>
    <externalId>true</externalId>
    <label>Id Sap Doc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>