force-app/main/default/objects/Opportunity/fields/InfoType__c.field-meta.xml
<CustomField>
    <fullName>InfoType__c</fullName>
    <description>Type of record of the additional info related to the opportunity (if any). Can be &apos;CUSTOM PROJECT&apos;, &apos;FACADE&apos; or &apos;KITCHEN&apos; (or blank)</description>
    <label>Opportunity Info Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROJECT</fullName>
                <label>Custom Project</label>
            </value>
            <value>
                <fullName>KITCHEN</fullName>
                <label>Kitchen</label>
            </value>
            <value>
                <fullName>FACADE</fullName>
                <label>Facade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>