force-app/main/default/objects/Opportunity/fields/IniProjectDate__c.field-meta.xml
<CustomField>
    <fullName>IniProjectDate__c</fullName>
    <label>IniProjectDate</label>
    <type>DateTime</type>
</CustomField>