force-app/main/default/objects/Opportunity/fields/IniProjectDateFecha__c.field-meta.xml
<CustomField>
    <fullName>IniProjectDateFecha__c</fullName>
    <label>IniProjectDateFecha</label>
    <type>Date</type>
</CustomField>