force-app/main/default/objects/Opportunity/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest</label>
    <type>Checkbox</type>
</CustomField>