force-app/main/default/objects/Opportunity/fields/IsDormant__c.field-meta.xml
<CustomField>
    <fullName>IsDormant__c</fullName>
    <description>Indica si la opp es dormant</description>
    <formula>IF( Activity__c = &apos;Dormant&apos; &amp;&amp; IsClosed = False, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDormant</label>
    <type>Checkbox</type>
</CustomField>