force-app/main/default/objects/Opportunity/fields/IsGeneric__c.field-meta.xml
<CustomField>
    <fullName>IsGeneric__c</fullName>
    <formula>RecordType.Name = &quot;Automatic Opportunity&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsGeneric</label>
    <type>Checkbox</type>
</CustomField>