force-app/main/default/objects/Opportunity/fields/LastEventDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastEventDateTime__c</fullName>
    <description>We set here the time of the last Event related created</description>
    <label>Last Event DateTime</label>
    <type>DateTime</type>
</CustomField>