force-app/main/default/objects/Opportunity/fields/LastOrderDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastOrderDateTime__c</fullName>
    <description>We set here the time of the last Order related created</description>
    <label>Last Order DateTime</label>
    <type>DateTime</type>
</CustomField>