force-app/main/default/objects/Opportunity/fields/LastQuoteDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastQuoteDateTime__c</fullName>
    <description>We set here the time of the last Quote related created</description>
    <label>Last Quote DateTime</label>
    <type>DateTime</type>
</CustomField>