force-app/main/default/objects/Opportunity/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <formula>TEXT(LeadId__r.LeadType__c)</formula>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>