force-app/main/default/objects/Opportunity/fields/Link_a_Oportunidad_ANA__c.field-meta.xml
<CustomField>
    <fullName>Link_a_Oportunidad_ANA__c</fullName>
    <formula>&quot;https://porcelanosa.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Id &amp; &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link a Oportunidad ANA</label>
    <type>Text</type>
</CustomField>