force-app/main/default/objects/Opportunity/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Taps</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Bathtubs</fullName>
            </value>
            <value>
                <fullName>Shower</fullName>
            </value>
            <value>
                <fullName>Shower tray</fullName>
            </value>
            <value>
                <fullName>Shower column</fullName>
            </value>
            <value>
                <fullName>Sprinklers</fullName>
            </value>
            <value>
                <fullName>Bulkheads</fullName>
            </value>
            <value>
                <fullName>Washbasins</fullName>
            </value>
            <value>
                <fullName>Sanitary</fullName>
            </value>
            <value>
                <fullName>Radiators</fullName>
            </value>
            <value>
                <fullName>Bathroom accessories</fullName>
            </value>
            <value>
                <fullName>Wardrobe</fullName>
            </value>
            <value>
                <fullName>Dressing room</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>