force-app/main/default/objects/Opportunity/fields/Number_of_Actors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Actors__c</fullName>
    <description>Field which determiens the # of actors within an opportunity</description>
    <label># of Actors</label>
    <summaryForeignKey>Opportunity_Actor__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>