force-app/main/default/objects/Opportunity/fields/numberOfProducts__c.field-meta.xml
<CustomField>
    <fullName>numberOfProducts__c</fullName>
    <description>Count of Opportunity Line Items</description>
    <label># of Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>