force-app/main/default/objects/Opportunity/fields/Offer_has_been_accepted__c.field-meta.xml
<CustomField>
    <fullName>Offer_has_been_accepted__c</fullName>
    <label>Offer has been accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>--</fullName>
                <isActive>false</isActive>
                <label>--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>