force-app/main/default/objects/Opportunity/fields/Opportunity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Classification__c</fullName>
    <label>Opportunity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Health care</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Mixed Use Development</fullName>
                <isActive>false</isActive>
                <label>Mixed Use Development</label>
            </value>
            <value>
                <fullName>Office</fullName>
                <label>Office/Corporate</label>
            </value>
            <value>
                <fullName>Other (indicate)</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Transport stations</fullName>
                <label>Other Transport stations</label>
            </value>
            <value>
                <fullName>Public building</fullName>
                <isActive>false</isActive>
                <label>Public building</label>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Residential (Retail)</fullName>
            </value>
            <value>
                <fullName>Retail Store</fullName>
            </value>
            <value>
                <fullName>Samples Ecommerce</fullName>
            </value>
            <value>
                <fullName>Senior living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>