force-app/main/default/objects/Opportunity/fields/Opportunity_Classification_II__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Classification_II__c</fullName>
    <label>Opportunity Classification II</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Car dealership</fullName>
            </value>
            <value>
                <fullName>Casinos</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Clothing store</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial institutions</fullName>
                <label>Financial institutions/Banks</label>
            </value>
            <value>
                <fullName>Fitness Club</fullName>
            </value>
            <value>
                <fullName>Government/ Public Building</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Multi-unit</fullName>
            </value>
            <value>
                <fullName>Museum</fullName>
            </value>
            <value>
                <fullName>Other store (indicate)</fullName>
                <label>Other store</label>
            </value>
            <value>
                <fullName>Religious Buildings</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Roll Out</fullName>
            </value>
            <value>
                <fullName>Shopping centre/Mall/Leisure center</fullName>
            </value>
            <value>
                <fullName>Single-family home</fullName>
            </value>
            <value>
                <fullName>Single Location</fullName>
            </value>
            <value>
                <fullName>Sports center</fullName>
                <label>Sports Arena</label>
            </value>
            <value>
                <fullName>Supermarket</fullName>
                <label>Supermarket/Grocery Stores</label>
            </value>
            <value>
                <fullName>Theaters/Cinema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>