force-app/main/default/objects/Opportunity/fields/Order_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivered__c</fullName>
    <formula>IF(NOT(ISBLANK(Order__r.Delivered__c)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Delivered</label>
    <type>Checkbox</type>
</CustomField>