force-app/main/default/objects/Opportunity/fields/Other_Classification__c.field-meta.xml
<CustomField>
    <fullName>Other_Classification__c</fullName>
    <label>Other Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>