force-app/main/default/objects/Opportunity/fields/Out_of_territory__c.field-meta.xml
<CustomField>
    <fullName>Out_of_territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of territory</label>
    <type>Checkbox</type>
</CustomField>