force-app/main/default/objects/Opportunity/fields/Pedido_entregado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_entregado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se rellena automático cuando se recibe el pedido</description>
    <label>Pedido entregado</label>
    <type>Checkbox</type>
</CustomField>