force-app/main/default/objects/Opportunity/fields/PorsaMarketId__c.field-meta.xml
<CustomField>
    <fullName>PorsaMarketId__c</fullName>
    <label>PorsaMarketId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>