force-app/main/default/objects/Opportunity/fields/Product_and_price__c.field-meta.xml
<CustomField>
    <fullName>Product_and_price__c</fullName>
    <defaultValue>&quot;Product -  Price&quot;</defaultValue>
    <description>Product and price of the opportunity</description>
    <inlineHelpText>Product and price of the opportunity</inlineHelpText>
    <label>Product and price</label>
    <type>TextArea</type>
</CustomField>